2007-12-10  Wim Taymans  <wim.taymans@gmail.com>

	* gst/audioconvert/Makefile.am:
	Also link to libm.

2007-12-10  Wim Taymans  <wim.taymans@gmail.com>

	* gst-libs/gst/riff/riff-media.c: (gst_riff_create_audio_caps):
	No need for floating point operations here. avoids having to link
	against the math library too.

2007-12-10  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/pbutils/descriptions.c: (formats),
	  (format_info_get_desc):
	* tests/check/libs/pbutils.c: (GST_START_TEST), (caps_strings),
	  (GST_START_TEST):
	  Add one or two missing formats.  Generate ADPCM description
	  dynamically depending on layout/format.

2007-12-09  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	  Don't define GST_DISABLE_DEPRECATED for releases. Fixes #498181.

2007-12-08  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Robin Stocker <robin dot stocker at gmx dot ch>

	* gst/subparse/gstsubparse.c: (gst_sub_parse_data_format_autodetect):
	  Some .srt files start with chunk number 0 and not chunk number 1,
	  recognise and accept those as well (fixes #502497).

	* tests/check/elements/subparse.c: (srt_input), (srt_input0),
	  (test_src):
	  Add unit test for the above.

2007-12-06  Wim Taymans  <wim.taymans@gmail.com>

	* gst/playback/gstplay-enum.c:
	(register_gst_autoplug_select_result),
	(gst_autoplug_select_result_get_type):
	* gst/playback/gstplay-enum.h:
	Add missing files.

2007-12-05  Wim Taymans  <wim.taymans@gmail.com>

	* gst/playback/Makefile.am:
	Group decodebin2 and uridecodebin into the same plugin so that they
	can share the GEnumType.

	* gst/playback/gstdecodebin2.c: (_gst_array_accumulator),
	(_gst_select_accumulator), (gst_decode_bin_class_init),
	(gst_decode_bin_init), (gst_decode_bin_autoplug_sort),
	(gst_decode_bin_autoplug_select), (gst_decode_bin_autoplug_add),
	(analyze_new_pad), (connect_pad), (gst_decode_bin_plugin_init):
	Add signal to sort factories instead of the more awkward autoplug-select
	signal.